reporter-web-app/src/App.css
@import '~antd/dist/antd.css';

/*
 FIXME Antd downloads the below fonts, need to figure out how we can embed them 
 within singe HTML page. SVG in CSS? How to override this default antd behavior?
 Use https://gero3.github.io/facetype.js/?
 https://at.alicdn.com/t/font_148784_v4ggb6wrjmkotj4i.woff
 https://at.alicdn.com/t/font_148784_v4ggb6wrjmkotj4i.ttf
 https://at.alicdn.com/t/font_148784_v4ggb6wrjmkotj4i.svg#iconfont
*/

body {
    background: #fafafa;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    height: auto;
}

.ort-summary .ant-row {
    margin-top: 20px;
}

.ort-app {
    background-color: #fff;
    border: 1px solid rgba(34,36,38,.15);
    border-radius: .28rem;
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    font-weight: 300;
    font-size: 14px;
    padding: 0em 1em 0.5em 1em;
    margin: 1em 2em 1em 2em;
    min-height: 600px;
}

.ort-app h1, h2, h3, h4 {
    color: #262727;
    margin: 1em 0em 1em 0em;
}

/*
FIXME Switch to use Ant Design customization
https://ant.design/docs/react/customize-theme
*/
.ort-app .ant-collapse,
.ort-app .ant-steps,
.ort-app .ant-tabs,
.ort-app .ant-tag,
.ort-app .ant-table,
.ort-app .ant-tree {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.ort-app .ort-clickable {
    cursor: pointer;
}

.ort-app .ort-clickable .anticon {
    font-size: 9px;
}

.ort-app .ort-metadata-props {
    font-size: 10px;
}

.ort-app .ort-metadata-props .anticon {
    font-size: 7px;
}

.ort-app .ort-metadata-props .ort-clickable {
    font-weight: 400;
    margin: 3px 0px 5px 0px;
}

.ort-app .ort-metadata-props th, .ort-app .ort-metadata-props td {
    vertical-align: top;
}

.ort-app .ort-metadata-props th {
    font-weight: 400;
    width: 90px;
}

.ort-app ul.ort-table-list {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.ort-app .ort-table-list > li {
    margin: 3px 0 3px 0;
    padding: 0;
}

.ort-app .ort-package-id .ant-tag {
    font-size: 10px;
    height: 13px;
    line-height: 10px;
    padding: 0 3px 0 3px;
}

.ort-app .ort-license.ant-tag:hover {
    color: #fff;
    background: rgba(0, 0, 0, 0.65);;
    border-color: rgba(0, 0, 0, 0.65);;
}

.ort-app .ort-license.ant-tag-green {
    color: #007020;
    background: #f6ffed;
    border-color: #4e8b60;
}

.ort-app .ort-license.ant-tag-green:hover {
    color: #fff;
    background: #007020;
    border-color: #007020;
}

.ort-app .ort-license.ant-tag-red:hover {
    color: #fff;
    background-color: #cf1322;
    border-color: #cf1322;
}

.ort-app .ort-license.ant-tag-orange:hover {
    color: #fff;
    background: #fa8c16;
    border-color: #fa8c16;
}

.ort-app .ort-license.ant-tag-blue:hover, 
.ort-app .ort-status-ok.ant-tag-blue:hover{
    color: #fff;
    background: #1890ff;
    border-color: #1890ff;
}

.ort-app .ort-package-props th, .ort-app .ort-package-props td {
    vertical-align: top;
}

.ort-app .ort-package-props th {
    font-weight: 400;
    width: 110px;
}

.ort-app .ort-package-deps-paths .ant-list-something-after-last-item .ant-spin-container > .ant-list-item:last-child {
    border-bottom: 0px;
}

.ort-app .ort-package-deps-paths .ant-list-pagination {
    margin: 0px 0px 5px 0px;
    text-align: left;
}

.ort-license-info .ort-license-obligations {
    padding: 0 25px 0 25px;
}

.ort-license-info .ort-license-obligations ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.ort-license-info .ort-license-obligations .ort-data-attribution {
    font-size: 0.5em;
}

.ort-license-info .ort-license-fulltext {
    font-size: 0.7em;
    white-space: pre-wrap;
}

.oss-tree-tooltip .ant-tooltip-inner {
  max-width: 500px;
}

.ort-tree-tooltip .ant-tooltip-inner {
    max-width: 500px;
}

.ort-tree-searched-item {
    background: #99ccff;
    color: #fff;
}

.ort-tree-selected-item {
    background: #1890ff;
    color: #fff;
    transition: background 100ms ease-in;
}

.ort-tree-wrapper {
    overflow: auto;
    flex: auto;
    height: calc(100vh - 150px);
}

.ort-tree-view {
    display: flex;
    flex-direction: column;
    overflow: hidden;
}

.ort-tree-search {
    display: flex;
    margin-bottom: 8px;
}

.ort-tree-navigation {
    display: flex;
    align-items: center;
    margin-left: 8px;
    flex-wrap: nowrap;
}

.ort-tree-navigation-counter {
    margin-left: 8px;
    width: 80px;
}

